--- a/styles/style.scss
+++ b/styles/style.scss
@@ -96,6 +96,7 @@ body {
 
 .nav-container {
   padding: 1rem 0;
+  position: relative;
   h2 {
     font-size: 1.2rem;
     font-weight: 100;
@@ -111,9 +112,14 @@ body {
 }
 
 nav {
-  display: none;
-  width: 100%;
+  width: 0;
+  overflow: hidden;
   max-width: 80rem;
+  height: 0;
+  opacity: 0;
+  position: absolute;
+  top: 25px;
+  left: 0;
 
   img {
     width: 100%;
@@ -124,6 +130,11 @@ nav {
     list-style: none;
 
     li {
+      overflow: hidden;
+      text-align: center;
+      color: $primary;
+      transform: scale(0);
+
       :before {
         position: absolute;
         bottom: -0.2rem;
