--- a/styles/style.scss
+++ b/styles/style.scss
@@ -1,5 +1,5 @@
 $primary: #161635;
-
+$secondary: #352616;
 * {
   margin: 0;
   padding: 0;
@@ -53,6 +53,10 @@ body {
   text-align: center;
 }
 
+.text-start {
+  text-align: start;
+}
+
 .underline {
   text-decoration: underline;
 }
@@ -69,10 +73,17 @@ body {
   margin: 0 auto;
 }
 
+.mt-0 {
+  @extend %mt-0;
+}
+
 .mt-2 {
   @extend %mt-2;
 }
 
+.mr-2 {
+  @extend %mr-2;
+}
 .container {
   width: 90%;
   max-width: 200rem;
@@ -80,8 +91,19 @@ body {
 }
 
 //extends
+%mt-0 {
+  margin-top: 0;
+}
+
 %mt-2 {
   margin-top: 2rem;
+}
+
+%mr-2 {
+  margin-right: 2rem;
+}
+%mt-md-0 {
+  margin-top: 0;
 }
 
 %phone-design {
@@ -114,13 +136,12 @@ body {
 nav {
   width: 0;
   overflow: hidden;
-  max-width: 80rem;
   height: 0;
   opacity: 0;
   position: absolute;
   top: 25px;
   left: 0;
-
+  z-index: 2;
   img {
     width: 100%;
     height: auto;
@@ -230,22 +251,31 @@ header {
 }
 
 .app-container {
-  width: 25rem;
-
+  width: 100%;
+  padding: 2rem;
+  border-radius: 25px;
+  border: 0px $primary solid;
+  background-color: rgba(53, 38, 22, 0);
   img {
     @extend %mt-2;
-    transform: scale(1);
-    transition: transform 0.2s ease-in-out;
+    opacity: 0;
+    transform: translate(200px, 0px);
+    width: 45%;
+
     &:hover {
       cursor: pointer;
-      transform: scale(1.5);
     }
   }
+}
+
+.splash-container {
+  overflow: hidden;
 }
 
 .header-splash {
   display: grid;
   width: 100%;
+  max-height: 65rem;
   grid-template-columns: repeat(6, 1fr);
   grid-template-rows: repeat(6, 1fr);
 
@@ -259,6 +289,8 @@ header {
     grid-column: 4 / span 3;
     grid-row: 1 / span 5;
     z-index: 2;
+    opacity: 0;
+    transform: translate(0px, 400px);
   }
 
   .splash-landscape-view {
@@ -266,6 +298,8 @@ header {
     grid-column: 1 / span 6;
     grid-row: 2 / span 5;
     z-index: 1;
+    opacity: 0;
+    transform: translate(0px, 400px);
   }
 
   .splash-convo {
@@ -274,6 +308,8 @@ header {
     z-index: 2;
     margin-left: 2rem;
     position: relative;
+    opacity: 0;
+    transform: translate(0px, 400px);
 
     &::before {
       content: "";
@@ -289,8 +325,68 @@ header {
       pointer-events: none;
     }
     .splash-message {
-      height: 5rem;
+      transform: translate(-400px, 0px);
+      height: 4rem;
     }
+  }
+}
+
+@media screen and (min-width: 900px) {
+  .mt-md-0 {
+    margin-top: 0;
+  }
+
+  .mx-md-0 {
+    margin-left: 0;
+    margin-right: 0;
+  }
+
+  .text-md-start {
+    text-align: start;
+  }
+
+  .flex-md-row {
+    flex-direction: row;
+  }
+
+  .align-md-start {
+    align-items: flex-start;
+  }
+
+  .justify-md-between {
+    justify-content: space-between;
+  }
+
+  .justify-md-around {
+    justify-content: space-around;
+  }
+  nav {
+    width: 100%;
+    height: fit-content;
+    opacity: 1;
+    position: relative;
+    top: 0;
+    left: 0;
+
+    ul li {
+      color: #fff;
+      transform: scale(1);
+    }
+  }
+
+  .hamburger {
+    display: none;
+  }
+
+  .header-text h1 {
+    font-size: 5.5rem;
+    max-width: 61.8rem;
+  }
+
+  .app-container {
+    margin-top: 2rem;
+    max-width: 90%;
+    min-height: 35rem;
   }
 }
 
